# alfred-capital

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  CLI_USAGE.md  CONFIGURATION.md  Cargo.toml  DELIVERABLES_TESTING_PLAN.md  DELIVERABLES_VERIFICATION_REPORT.md  DEPLOYMENT.md  Dockerfile  MANUAL_TESTING_GUIDE.md  README.md  SCALABILITY.md  SYSTEM_PRESENTATION.md  config.example.toml  docker-compose.yml
benches/: database_benchmarks.rs
config/: development.toml  production.toml  staging.toml  testnet.toml
scripts/: deploy.sh  docker-entrypoint.sh  install.sh  polygon-pol-indexer.service  run_comprehensive_tests.bat  run_comprehensive_tests.sh  uninstall.sh
src/: config.rs  error.rs  error_recovery.rs  error_tests.rs  lib.rs  logging.rs  main.rs  retry.rs
src/api/: cli.rs  http.rs  mod.rs
src/blockchain/: block_monitor.rs  block_processor.rs  mod.rs  rpc_client.rs  transfer_detector.rs
src/database/: mod.rs  operations.rs  schema.rs  tests.rs
src/models/: address_classifier.rs  mod.rs  net_flow.rs  transaction.rs
tests/: README.md  end_to_end_workflow.rs  final_integration_system_test.rs  integration_api.rs  integration_block_monitoring.rs  integration_block_processing.rs  integration_polygon_testnet.rs  integration_server.rs  network_failure_recovery.rs  performance_tests.rs  validation_tests.rs
